# python-project-50

./: .flake8  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py  test_import.py
.github/workflows/: main.yml  sonarcloud.yml
gendiff/: __init__.py  __main__.py  cli.py  diff.py  diff_builder.py  file_reader.py  parsers.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
hexlet_code/: __init__.py
hexlet_code/scripts/: gendiff.py  gendiff.py Y
src/hexlet_code/scripts/: gendiff.py
tests/: test_10_diff.py  test_gendiff.py
tests/test_data/: expected_nested.txt  expected_result.txt  file2.json
