[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0"
]

[project.scripts]
gendiff = "gendiff.cli:main"

[tool.setuptools]
packages = {find = {include = ["gendiff*"]}}

[tool.setuptools.package-dir]
"" = "."
